add: font, title

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>GitHub Repositories</title>
+  <title>GitHub Pinned Repositories</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: JetBrains Mono, monospace;
       margin: 0;
       padding: 0;
       background-color: #f4f4f4;
@@ -64,7 +65,7 @@
       margin-bottom: 20px;
       padding: 15px;
       background-color: #fff;
-      border-radius: 8px;
+      border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.3s ease;
     }
@@ -115,9 +116,10 @@
     }
   </style>
 </head>
+
 <body>
   <div class="container">
-    <h1>GitHub Repositories</h1>
+    <h1>GitHub Pinned Repositories</h1>
     <form id="usernameForm">
       <input type="text" id="usernameInput" placeholder="Enter GitHub Username" required>
       <button type="submit">Get Repos</button>
@@ -129,7 +131,7 @@
   </div>
 
   <script>
-    document.getElementById('usernameForm').addEventListener('submit', async function(event) {
+    document.getElementById('usernameForm').addEventListener('submit', async function (event) {
       event.preventDefault();
       const username = document.getElementById('usernameInput').value;
       const response = await fetch(`/${username}`);
@@ -155,4 +157,5 @@
     }
   </script>
 </body>
+
 </html>
