--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>GitHub Pinned Repositories</title>
-  <link rel="icon" type="image/png" href="/public/favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="GitHub Pinned Repositories">
+  <meta name="keywords" content="GitHub Pinned Repositories">
+  <meta name="author" content="Yash Suhagiya">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
